@@ -1,3 +1,8 @@
+2008-07-24  Jozef Vesely  <vesely@gjh.sk>
+
+	* src/datafile.c src/datafile.h:  Binary data types for 64-bit ints
+	(long long).
+
 2008-07-23  Shigeharu Takeno  <shige@iee.niit.ac.jp>
 
 	* docs/gnuplot.doc: Fix various typos and cross-reference formats.
